rust/macros/tests/invalid/target/debug/deps/two_arrows-627d677711d15cf5.d
/Users/hhayk/Exercism/rust/macros/tests/invalid/target/debug/deps/two_arrows-627d677711d15cf5.d: two_arrows.rs Cargo.toml

/Users/hhayk/Exercism/rust/macros/tests/invalid/target/debug/deps/libtwo_arrows-627d677711d15cf5.rmeta: two_arrows.rs Cargo.toml

two_arrows.rs:
Cargo.toml:

# env-dep:CLIPPY_ARGS=--no-deps__CLIPPY_HACKERY__
# env-dep:CLIPPY_CONF_DIR
